# SQR-S25-InnoQuiz

./: .gitignore  README.md
inno_quiz/: .env.example  .flake8  inno_quiz.db  pyproject.toml
inno_quiz/backend/: .env.example  alembic.ini  config.py  db.py  deps.py  init_db.py  locustfile.py  main.py
inno_quiz/backend/alembic/: env.py
inno_quiz/backend/alembic/versions/: 1258a6cd3279_initial_revision.py  ea4143efef9e_initial_migration.py
inno_quiz/backend/auth/: __init__.py  jwt.py
inno_quiz/backend/domain/: answer_option.py  auth.py  question.py  question_request.py  quiz.py  quiz_request.py  user.py  user_answer.py  user_attempt.py
inno_quiz/backend/endpoints/: __init__.py  health.py
inno_quiz/backend/endpoints/v1/: __init__.py  question.py  quiz.py  quiz_api.py  users.py
inno_quiz/backend/gateways/trivia/: __init__.py  gateway.py  models.py
inno_quiz/backend/models/: __init__.py  answer_option.py  base.py  question.py  quiz.py  user.py  user_answer.py  user_attempt.py
inno_quiz/backend/repo/: __init__.py  answer_option.py  default.py  question.py  quiz.py  user.py  user_answer.py  user_attempt.py
inno_quiz/backend/service/: errors.py  question.py  quiz.py  quiz_service.py
inno_quiz/backend/tests/: __init__.py  conftest.py
inno_quiz/backend/tests/integration/: test_quiz.py  test_quiz_api.py  test_trivia_gateway.py  test_users.py
inno_quiz/backend/tests/unit/: test_quiz_service.py  test_trivia_integration.py
inno_quiz/frontend/: .env.example  run.py
inno_quiz/frontend/app/: main.py
inno_quiz/frontend/app/utils/: api.py
inno_quiz/frontend/app/views/: __init__.py  add_questions.py  create_quiz.py  login.py  play_quiz.py  (+1 more)
inno_quiz/frontend/tests/: __init__.py  test_api_auth.py  test_api_consistency.py  test_connection_handling.py  test_login.py
inno_quiz/inno_quiz/: inno_quiz.db
(+9 files in other folders)
