[tool.poetry]
name = "inno-quiz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "../README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.2"}
bcrypt = "^4.3.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
streamlit = "^1.45.0"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
